Added new certification for AWS Cloud Quest, updated LinkedIn Learning logo.

--- a/index.html
+++ b/index.html
@@ -451,9 +451,22 @@
                 <div class="certifications-card raised-card">
                     <div class="certifications-card-content">
                         <img class="certifications-card-logo"
+                            src="assets/images/main/certifications/aws-cloud-quest.svg"
+                            alt="AWS Cloud Quest: Cloud Practitioner" />
+                        <p class="certifications-card-name">AWS Cloud Quest: <br />Cloud Practitioner</p>
+                    </div>
+                    <div class="certifications-card-links">
+                        <a href="https://www.credly.com/badges/f6cd4a92-25f6-48d7-88b1-84434a65166a/public_url"
+                            class="certifications-card-link certifications-card-hollow-button"
+                            target="_blank">Verification Link</a>                        
+                    </div>
+                </div>
+                <div class="certifications-card raised-card">
+                    <div class="certifications-card-content">
+                        <img class="certifications-card-logo"
                             src="assets/images/main/certifications/linkedin-learning.svg"
                             alt="Generative AI Certification Badge" />
-                        <p class="certifications-card-name">Career Essentials in Generative AI</p>
+                        <p class="certifications-card-name">Career Essentials in <br />Generative AI</p>
                     </div>
                     <div class="certifications-card-links">
                         <a href="https://www.linkedin.com/learning/certificates/6009a134017eefba5e4f1654a83f0c39558ffec9525230f1f0ad8e1ac28e5967"
